fixed some  spacing

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 /* Self Summary */
 .self-card {
     width: 75%;
-    height: 48vh;
+    height: 100%;
     border-radius: 30px;
     background: #e0e0e0;
     box-shadow: 10px 7px 7px rgb(25, 25, 25),
